force-app/main/default/objects/Shipment__c/fields/Actual_Sail_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sail_Date__c</fullName>
    <label>Actual Sail Date</label>
    <type>Date</type>
</CustomField>