force-app/main/default/objects/Shipment__c/fields/Booking_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Request_Status__c</fullName>
    <label>Booking Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Await Apply</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>