force-app/main/default/objects/Shipment__c/fields/compliant__c.field-meta.xml
<CustomField>
    <fullName>compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>compliant</label>
    <type>Checkbox</type>
</CustomField>