force-app/main/default/objects/Shipment__c/fields/External_Doc_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>External_Doc_Cutoff_Date__c</fullName>
    <label>External Doc Cutoff Date</label>
    <type>Date</type>
</CustomField>