force-app/main/default/objects/Shipment__c/fields/Non_Conformance_Code__c.field-meta.xml
<CustomField>
    <fullName>Non_Conformance_Code__c</fullName>
    <label>Non-Conformance Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>