force-app/main/default/objects/Shipment__c/fields/Plant_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Plant_Load_Date__c</fullName>
    <label>Plant Load Date</label>
    <type>Date</type>
</CustomField>