force-app/main/default/objects/Shipment__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>Reference Number from Meridian</description>
    <externalId>true</externalId>
    <inlineHelpText>Reference Number from Meridian</inlineHelpText>
    <label>Reference Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>