force-app/main/default/objects/Shipment__c/fields/Sail_Date__c.field-meta.xml
<CustomField>
    <fullName>Sail_Date__c</fullName>
    <label>Sail Date</label>
    <type>Date</type>
</CustomField>