force-app/main/default/objects/Shipment__c/listViews/Shipments_BDP_Shipment.listView-meta.xml
<ListView>
    <fullName>Shipments_BDP_Shipment</fullName>
    <filterScope>Queue</filterScope>
    <label>Shipments</label>
    <queue>Shipments</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>